# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "microsim"
dynamic = ["version"]
description = "Light microscopy simulation in python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "annotated-types >=0.7.0",
    "numpy >=1.26,<2.0",             # something still breaks with 2+
    "pint >=0.23",
    "platformdirs >=4.3.6",
    "pydantic >=2.8",
    "fpbase",
    "pydantic-settings >2.5.0",
    "scipy >=1.15.2",
    "tensorstore >=0.1.70,!=0.1.72",
    "tqdm >=4.67.1",
    "xarray >=2024.1.0",
    "zarr >=2.17,<3.0",
]

[project.urls]
homepage = "https://github.com/tlambert03/microsim"
repository = "https://github.com/tlambert03/microsim"

# # https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
view = ["ndv[pyqt,vispy]", "matplotlib>=3.10.1", "pyopengl-accelerate"]
io = ["tifffile>=2025.2.18", "imageio[ffmpeg]>=2.22"]
cosem = [
    "dask>=2024.1.0",
    "imageio>=2.22",
    "boto3>=1.32",
    "supabase>=2.13.0",
    "s3fs>=0.4.2",
    "xarray-datatree>=0.0.14",
]
torch = ["torch>=2.6.0", "torchaudio>=2.7.0"]
jax = [
    "jax[cpu]>=0.5.2",
    "dm-tree ==0.1.8; sys_platform == 'darwin'",
    "dm-tree >=0.1.7",
]
all = ["microsim[view,io,cosem]", "rich>=13"]

[dependency-groups]
test = ["pytest>=8.3.5", "pytest-cov>=6.0.0"]
dev = [
    { include-group = "test" },
    "microsim[all,jax,torch]",
    "boto3-stubs[s3]",
    "ipython",
    "mypy",
    "pdbpp; sys_platform == 'darwin'",
    "pre-commit-uv",
    "rich",
    "ruff",
    "types-tqdm",
]
docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material==9.5.17",
    "mkdocs-autorefs==1.1.0",
    "mkdocstrings ==0.24.3",
    "mkdocstrings-python ==1.9.2",
    "mkdocs-jupyter==0.24.8",
    "griffe==0.45.3",
    "griffe-fieldz",
]

[tool.uv.sources]
microsim = { workspace = true }


[tool.ruff]
line-length = 88
src = ["src"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
pyupgrade = { keep-runtime-typing = true }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D10",  # Missing docstring in public ...
    "D401", # First line should be in imperative mood
]
exclude = ["*xarray_jax*"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
"setup.py" = ["D"]
"docs/*.py" = ["E402"]


# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false

# [[tool.mypy.overrides]]
# module = ["numpy.*",]
# ignore_errors = true

[[tool.mypy.overrides]]
module = ["microsim.xarray_jax.*"]
ignore_errors = true

[tool.pyright]
reportArgumentType = false  # too hard with pydantic

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:unclosed transport:ResourceWarning",                     # only on py3.10... not sure why
    "ignore:Clipping negative intensity values:UserWarning",         # when importing FPbase spectra
    "ignore:__array__ implementation doesn't accept a copy keyword",
]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "raise ValueError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["microsim"]
omit = ["*xarray_jax*"]

# https://github.com/mgedmin/check-manifest#configuration
# add files that you want check-manifest to explicitly ignore here
# (files that are in the repo but shouldn't go in the package)
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "setup.py",
    "tests/**/*",
]

[tool.typos.default]
extend-ignore-identifiers-re = ["(?i)nd.*", "(?i)ome", "(?i)ser"]
