[metadata]
name = microsim
description = Light microscopy simulation in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/microsim
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD license
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/tlambert03/microsim

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
testing =
    pytest
    pytest-cov
    tox
    tox-conda

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = microsim

[pydocstyle]
match_dir = microsim
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = microsim
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
